--- a/html/basket.html
+++ b/html/basket.html
@@ -228,7 +228,9 @@
             <div class="aside__cart">
                 <h3 class="aside__cart-title">Ваша корзина пуста.</h3>
                 <span class="aside__cart-content">Добавьте же скорее что-нибудь!</span>
-                <button class="aside__promotion">Бесплатная доставка от 800 СОМ</button>
+                <a class="aside__promotion-link" href="./basket.html">
+                    Бесплатная доставка от 800 СОМ
+                </a>
             </div>
 
             <div class="aside__address">
