--- a/html/products.html
+++ b/html/products.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/style/products/products.css">
+    <link rel="stylesheet" href="../style/products/products.css">
     <title>ROMSEM</title>
 </head>
 
@@ -397,9 +397,9 @@
             <div class="aside__cart">
                 <h3 class="aside__cart-title">Ваша корзина пуста.</h3>
                 <span class="aside__cart-content">Добавьте же скорее что-нибудь!</span>
-                <button class="aside__promotion">
-                    <a class="aside__promotion-link" href="./basket.html">Бесплатная доставка от 800 СОМ</a>
-                </button>
+                <a class="aside__promotion-link" href="./basket.html">
+                    Бесплатная доставка от 800 СОМ
+                </a>
             </div>
 
             <div class="aside__address">
