--- a/pages/basket.html
+++ b/pages/basket.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/style/basket/basket.css">
+    <link rel="stylesheet" href="/styles/basket/basket.css">
     <title>ROMSEM</title>
 </head>
 
@@ -20,70 +20,70 @@
 
             <ul class="navigation__list">
                 <li class="navigation__list-item">
-                    <a class="navigation__list-link" href="../html/products.html">
+                    <a class="navigation__list-link" href="./products.html">
                         <img class="navigation__list-icon" src="../img/icons/pizza.svg" alt="">
                         Пицца
                     </a>
                 </li>
 
                 <li class="navigation__list-item">
-                    <a class="navigation__list-link" href="../html/products.html">
+                    <a class="navigation__list-link" href="./products.html">
                         <img class="navigation__list-icon" src="../img/icons/sets.svg" alt="">
                         Сеты
                     </a>
                 </li>
 
                 <li class="navigation__list-item">
-                    <a class="navigation__list-link" href="../html/products.html">
+                    <a class="navigation__list-link" href="./products.html">
                         <img class="navigation__list-icon" src="../img/icons/wok.svg" alt="">
                         WOK
                     </a>
                 </li>
 
                 <li class="navigation__list-item">
-                    <a class="navigation__list-link" href="../html/products.html">
+                    <a class="navigation__list-link" href="./products.html">
                         <img class="navigation__list-icon" src="../img/icons/rolls.svg" alt="">
                         Роллы
                     </a>
                 </li>
 
                 <li class="navigation__list-item">
-                    <a class="navigation__list-link" href="../html/products.html">
+                    <a class="navigation__list-link" href="./products.html">
                         <img class="navigation__list-icon" src="../img/icons/sushi.svg" alt="">
                         Суши
                     </a>
                 </li>
 
                 <li class="navigation__list-item">
-                    <a class="navigation__list-link" href="../html/products.html">
+                    <a class="navigation__list-link" href="./products.html">
                         <img class="navigation__list-icon" src="../img/icons/salad.svg" alt="">
                         Салаты
                     </a>
                 </li>
 
                 <li class="navigation__list-item">
-                    <a class="navigation__list-link" href="../html/products.html">
+                    <a class="navigation__list-link" href="./products.html">
                         <img class="navigation__list-icon" src="../img/icons/soups.svg" alt="">
                         Супы
                     </a>
                 </li>
 
                 <li class="navigation__list-item">
-                    <a class="navigation__list-link" href="../html/products.html">
+                    <a class="navigation__list-link" href="./products.html">
                         <img class="navigation__list-icon" src="../img/icons/corn-dogs.svg" alt="">
                         Корн доги
                     </a>
                 </li>
 
                 <li class="navigation__list-item">
-                    <a class="navigation__list-link" href="../html/products.html">
+                    <a class="navigation__list-link" href="./products.html">
                         <img class="navigation__list-icon" src="../img/icons/drink.svg" alt="">
                         Напитки
                     </a>
                 </li>
 
                 <li class="navigation__list-item">
-                    <a class="navigation__list-link" href="../html/products.html">
+                    <a class="navigation__list-link" href="./products.html">
                         <img class="navigation__list-icon" src="../img/icons/stock.svg" alt="">
                         Акции
                     </a>
