--- a/pages/card-products.html
+++ b/pages/card-products.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/style/reviews/reviews.css">
+    <link rel="stylesheet" href="/styles/card-products/card-products.css">
     <title>ROMSEM</title>
 </head>
 
@@ -15,75 +15,76 @@
                 <a class="navigation__logo-link" href="./index.html">
                     <img class="navigation__logo" src="/img/icons/logo.svg" alt="logo">
                 </a>
+
                 <a class="navigation__company-name" href="./index.html">ROMSEM</a>
             </div>
 
             <ul class="navigation__list">
                 <li class="navigation__list-item">
-                    <a class="navigation__list-link" href="../html/products.html">
+                    <a class="navigation__list-link" href="./products.html">
                         <img class="navigation__list-icon" src="../img/icons/pizza.svg" alt="">
                         Пицца
                     </a>
                 </li>
 
                 <li class="navigation__list-item">
-                    <a class="navigation__list-link" href="../html/products.html">
+                    <a class="navigation__list-link" href="./products.html">
                         <img class="navigation__list-icon" src="../img/icons/sets.svg" alt="">
                         Сеты
                     </a>
                 </li>
 
                 <li class="navigation__list-item">
-                    <a class="navigation__list-link" href="../html/products.html">
+                    <a class="navigation__list-link" href="./products.html">
                         <img class="navigation__list-icon" src="../img/icons/wok.svg" alt="">
                         WOK
                     </a>
                 </li>
 
                 <li class="navigation__list-item">
-                    <a class="navigation__list-link" href="../html/products.html">
+                    <a class="navigation__list-link" href="./products.html">
                         <img class="navigation__list-icon" src="../img/icons/rolls.svg" alt="">
                         Роллы
                     </a>
                 </li>
 
                 <li class="navigation__list-item">
-                    <a class="navigation__list-link" href="../html/products.html">
+                    <a class="navigation__list-link" href="./products.html">
                         <img class="navigation__list-icon" src="../img/icons/sushi.svg" alt="">
                         Суши
                     </a>
                 </li>
 
                 <li class="navigation__list-item">
-                    <a class="navigation__list-link" href="../html/products.html">
+                    <a class="navigation__list-link" href="./products.html">
                         <img class="navigation__list-icon" src="../img/icons/salad.svg" alt="">
                         Салаты
                     </a>
                 </li>
 
                 <li class="navigation__list-item">
-                    <a class="navigation__list-link" href="../html/products.html">
+                    <a class="navigation__list-link" href="./products.html">
                         <img class="navigation__list-icon" src="../img/icons/soups.svg" alt="">
                         Супы
                     </a>
                 </li>
 
                 <li class="navigation__list-item">
-                    <a class="navigation__list-link" href="../html/products.html">
+                    <a class="navigation__list-link" href="./products.html">
                         <img class="navigation__list-icon" src="../img/icons/corn-dogs.svg" alt="">
                         Корн доги
                     </a>
                 </li>
 
                 <li class="navigation__list-item">
-                    <a class="navigation__list-link" href="../html/products.html">
+                    <a class="navigation__list-link" href="./products.html">
                         <img class="navigation__list-icon" src="../img/icons/drink.svg" alt="">
                         Напитки
                     </a>
                 </li>
 
                 <li class="navigation__list-item">
-                    <a class="navigation__list-link" href="../html/products.html">
+                    <a class="navigation__list-link" href="./products.html">
                         <img class="navigation__list-icon" src="../img/icons/stock.svg" alt="">
                         Акции
                     </a>
@@ -116,11 +117,11 @@
                     <div class="header__nav-container">
                         <div class="header__nav-link">
                            <span>
-                               <a class="header__link-item" href="#">Отзывы</a>
+                               <a class="header__link-item" href="reviews.html">Отзывы</a>
                            </span>
 
                            <span>
-                               <a class="header__link-item" href="#">Доставка и оплата</a>
+                               <a class="header__link-item" href="reviews.html">Доставка и оплата</a>
                            </span>
                         </div>
 
@@ -132,45 +133,89 @@
             </header>
 
             <main class="main">
-                <section class="main__container-tittle">
-                    <h2 class="main__tittle">Отзывы</h2>
-                    <button class="main__tittle-btn">
-                        + Добавить отзыв
+                <div class="main__container-button">
+                    <button class="main__button">
+                        <img src="../img/icons/arrow-left.svg" alt="">
+                        назад
                     </button>
+
+                    <button class="main__button">
+                        вперёд
+                        <img src="../img/icons/arrow-right.svg" alt="">
+                    </button>
+                </div>
+
+                <section class="main__card">
+                    <img src="../img/philadelphia-salmon-sets-big.png" alt="philadelphia">
+
+                    <div class="main__container-card">
+                        <h2 class="main__card-title">Филадельфия и лосось сет</h2>
+
+                        <span class="main__title-description">290 грамм</span>
+
+                        <div class="main__price-product">
+                            <span class="main__price">1150 COM</span>
+
+                            <button class="main__btn-minus">
+                                <img class="main__minus-icon" src="../img/icons/minus.svg" alt="">
+                            </button>
+
+                            <span class="main__btn-amount">10</span>
+
+                            <button class="main__btn-plus">
+                                <img src="../img/icons/plus.svg" alt="">
+                            </button>
+                        </div>
+
+                        <span class="main__card-subtitle">Состав</span>
+
+                        <span class="main__card-description">Лосось, сыр "Филадельфия", огурец, авокадо</span>
+
+                        <a class="main__buy" href="./basket.html">Хочу!</a>
+                    </div>
                 </section>
 
-                <section class="main__container-reviews">
-                    <div class="main__reviews">
-                        <h3 class="main__tittle">
-                            Розалия
-                            <span class="main__reviews-data">02.24.21</span>
-                        </h3>
+                <section class="main__container-cards">
+                    <h3 class="main__card-recommendation">Рекомендуем к этому товару</h3>
+                    <div class="main__container-product">
+                        <div class="main__product">
+                            <a href="#">
+                                <img src="../img/philadelphia-product-cart.png" alt="">
+                            </a>
 
-                        <p class="main__reviews-text">
-                            Ваша доставка и ваши блюда лучшие в Харькове!) всегда очень вкусно, вовремя, всегда вежливые курьеры и девушки на телефоне
-                        </p>
-                    </div>
+                            <h4 class="main__product-tittle">Филадельфия</h4>
 
-                    <div class="main__reviews">
-                        <h3 class="main__tittle">
-                            Елена
-                            <span class="main__reviews-data">02.23.21</span>
-                        </h3>
+                            <button class="main__product-btn">
+                                140 COM
+                                <img src="../img/icons/plus.svg" alt="">
+                            </button>
+                        </div>
 
-                        <p class="main__reviews-text">
-                            Ооочень вкусно!!!!!
-                        </p>
-                    </div>
+                        <div class="main__product">
+                            <a href="#">
+                                <img src="../img/banzai.png" alt="">
+                            </a>
 
-                    <div class="main__reviews">
-                        <h3 class="main__tittle">
-                            Сергей Гаврилюк
-                            <span class="main__reviews-data">02.23.21</span>
-                        </h3>
+                            <h4 class="main__product-tittle">Банзай</h4>
 
-                        <p class="main__reviews-text">
-                            Заказываем у Вас больше 2 -ух лет, были разные ситуации, но сервис стал лучше, суши вкуснее. За доставку сегодня на время, огромное спасибо, точь-в-точь в минута в минуту. Успехов Вам и приятных бонусов нам )
-                        </p>
+                            <button class="main__product-btn">
+                                170 COM
+                                <img src="../img/icons/plus.svg" alt="">
+                            </button>
+                        </div>
+
+                        <div class="main__product">
+                            <a href="#">
+                                <img src="../img/arigato.png" alt="">
+                            </a>
+
+                            <h4 class="main__product-tittle">Аригато</h4>
+
+                            <button class="main__product-btn">
+                                180 COM
+                                <img src="../img/icons/plus.svg" alt="">
+                            </button>
+                        </div>
                     </div>
                 </section>
             </main>
@@ -181,6 +226,7 @@
                     <a class="footer__item" href="">Доставка и оплата</a>
                     <a class="footer__item" href="">Лента материалов</a>
                     <a class="footer__item" href="">Политика возврата</a>
+                    <a class="footer__item" href="./basket.html">Отзывы</a>
                 </div>
 
                 <div class="footer__container-social">
@@ -190,6 +236,7 @@
                         Выберите удобный
                         мессенджер для общения
                     </span>
+
                     <div class="footer__social">
                         <a class="footer__social-link" href="#">
                             <img src="../img/icons/whatsapp.svg" alt="">
@@ -230,7 +277,7 @@
 
             <div class="aside__address">
                 <img class="aside__map" src="../img/aside-map.png" alt="">
-                <a class="aside__map-icon" href="./basket.html">
+                <a class="aside__map-icon" href="#">
                     <img  src="/img/map-bg.svg" alt="">
                 </a>
                 <a class="aside__map-point" href="#">
